# Reswitch

./: .gitignore  LICENSE  README.md  Reswitch.spec  pyproject.toml  resolution_switcher.py  run.py
hooks/: hook-winshell.py
src/reswitch/: __main__.py  config.py  language.py
src/reswitch/core/: engine.py  models.py
src/reswitch/providers/: base_provider.py  epic_provider.py  gog_provider.py  steam_provider.py
src/reswitch/ui/: app.py  views.py  widgets.py
src/reswitch/utils/: helpers.py  logging_config.py  uac.py
